# blockchainElectionBackend

./: .env.sample  .gitignore  Cargo.toml  Readme.md  package.json  truffle-config.js
contracts/: VotingContract.sol
src/: api.rs  blockchain.rs  config.rs  cryptography.rs  main.rs  models.rs  smart_contract.rs
src/services/: votingService.ts
